--- a/microsoftproject.html
+++ b/microsoftproject.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microsoft Front Page</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="microsoft.css">
 </head>
 <body>
     
@@ -15,3 +15,23 @@
             <a href="#" class="promo-btn">Get Bing Wallpaper now</a>
         </div>
     </div>
+
+    
+    <header class="header">
+        <div class="logo">Microsoft</div>
+        <div class="nav">
+            <a href="#">Microsoft 365</a>
+            <a href="#">Teams</a>
+            <a href="#">Copilot</a>
+            <a href="#">Windows</a>
+            <a href="#">Surface</a>
+            <a href="#">Xbox</a>
+            <a href="#">Support</a>
+            </nav>
+        <div class="header-actions">
+            <a href="#">All Microsoft</a>
+            <a href="#">Search</a>
+            <a href="#">Cart🛒</a>
+            <a href="#">Sign in</a>
+        </div>
+    </header>
