--- a/microsoftproject.html
+++ b/microsoftproject.html
@@ -35,3 +35,12 @@
             <a href="#">Sign in</a>
         </div>
     </header>
+
+    <main class="hero">
+        <div class="hero-text">
+            <h1>Meet Surface Laptop</h1>
+            <p>
+                Unlock AI features with Microsoft 365 Copilot on Surface Laptop. Experience seamless productivity and creativity like never before.
+            </p>
+            <a href="#" class="primary-btn">Learn More</a>
+        </div>
